--- a/conservation.html
+++ b/conservation.html
@@ -1,61 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Learn all about different types of turtles, their habitats, and conservation efforts.">
+    <!-- Meta Information -->
+    <meta charset="UTF-8"> <!-- Specifies the character encoding for the document -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Ensures the page scales properly on mobile devices -->
+    <meta name="description" content="Learn all about different types of turtles, their habitats, and conservation efforts."> <!-- Describes the page for SEO -->
+
+    <!-- Page Title -->
     <title>Different Types of Turtles</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+
+    <!-- Stylesheets -->
+    <link rel="stylesheet" href="assets/css/styles.css"> <!-- Link to the custom CSS file -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css" 
+          integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ==" 
+          crossorigin="anonymous" referrerpolicy="no-referrer" /> <!-- Font Awesome for icons -->
 </head>
 <body>
-    <!-- Header and Hero Section -->
-     <div class="hero">
-        <div class="overlay"></div>
+    <!-- Hero Section with Header -->
+    <div class="hero">
+        <div class="overlay"></div> <!-- Transparent overlay for visual effect -->
+
+        <!-- Header with Navigation Menu -->
         <header>
+            <!-- Mobile Navigation Toggle Button -->
             <button id="navbarToggle" type="button" title="Navigation Toggle">
-                <i class="navbar-toggle-icon fas fa-bars"></i>
+                <i class="navbar-toggle-icon fas fa-bars"></i> <!-- Font Awesome icon for the menu toggle -->
             </button>
-                <nav>
-                    <ul>
-                        <li><a href="index.html">Home</a></li>
-                        <li><a href="about.html">About</a></li>
-                        <li><a href="types.html">Types of Turtles</a></li>
-                        <li><a href="conservation.html">Conservation</a></li>
-                        <li><a href="fun-facts.html">Fun Facts</a></li>
-                        <li><a href="contact.html">Contact Us</a></li>
-                    </ul>
-                </nav>
+
+            <!-- Navigation Bar -->
+            <nav>
+                <ul>
+                    <!-- Navigation Links -->
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About</a></li>
+                    <li><a href="types.html">Types of Turtles</a></li>
+                    <li><a href="conservation.html">Conservation</a></li>
+                    <li><a href="fun-facts.html">Fun Facts</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                </ul>
+            </nav>
         </header>
 
-     
-         <!-- Hero Section -->
-         <section class="hero-content">
-             <div class="hero-text">
-                 <h1>Support a Conservation</h2>
-                 <p>Explore different species, learn about their habitats, and discover how you can help protect these incredible creatures.</p>
-                </div>
-         </section>
-     </div>
+        <!-- Hero Content -->
+        <section class="hero-content">
+            <div class="hero-text">
+                <h1>Support a Conservation</h1> <!-- Main title for the page -->
+                <p>Explore different species, learn about their habitats, and discover how you can help protect these incredible creatures.</p> <!-- Supporting description -->
+            </div>
+        </section>
+    </div>
 
     <!-- Conservation Section -->
     <section class="conservation-content">
-        <img src="/assets/images/conservation.jpg" alt="Conservation">
-        <h2>Turtle Conservation: A Critical Need</h2>
+        <img src="/assets/images/conservation.jpg" alt="Conservation"> <!-- Conservation-related image -->
+        <h2>Turtle Conservation: A Critical Need</h2> <!-- Section title -->
+
+        <!-- Content Body -->
         <div class="content-body">
-            <p>Turtles have roamed the Earth for over 200 million years, surviving mass extinctions and shaping ecosystems around the world. However, in modern times, these ancient reptiles face unprecedented challenges. Habitat destruction, climate change, pollution, and poaching have pushed many turtle species to the brink of extinction. For instance, the Leatherback Sea Turtle, one of the largest and most iconic marine reptiles, has seen its population decline drastically due to loss of nesting sites and entanglement in fishing gear. Freshwater turtles and tortoises are also vulnerable, with many species targeted for the exotic pet trade or used in traditional medicine.</p>
-            <p>Conservation efforts are essential to protect these keystone species, which play vital roles in maintaining ecosystem health. Sea turtles, for example, help maintain healthy seagrass beds and coral reefs, which provide habitat for countless marine species. On land, tortoises aid in seed dispersal, supporting vegetation growth in arid environments. By conserving turtle populations, we are also protecting the delicate balance of the ecosystems they inhabit. This involves not only protecting nesting sites and creating wildlife corridors but also reducing human impacts like plastic waste and unsustainable fishing practices. Education and community engagement are key to raising awareness and inspiring collective action to ensure a future where turtles thrive.</p>
-            <p>You have the power to make a difference in the lives of turtles and the ecosystems they help sustain. Small actions, like reducing your use of single-use plastics, supporting sustainable fishing practices, and advocating for wildlife protection laws, can have a significant impact. Consider volunteering with local conservation groups or donating to organizations that work tirelessly to protect turtle habitats and rescue injured turtles. By spreading awareness and making eco-conscious choices, you can join the global effort to preserve these incredible creatures for generations to come. Together, we can ensure that turtles, symbols of resilience and longevity, continue to grace our oceans, rivers, and lands.</p>
+            <!-- Paragraph 1: Challenges Faced by Turtles -->
+            <p>
+                Turtles have roamed the Earth for over 200 million years, surviving mass extinctions and shaping ecosystems around the world. However, in modern times, these ancient reptiles face unprecedented challenges. Habitat destruction, climate change, pollution, and poaching have pushed many turtle species to the brink of extinction. For instance, the Leatherback Sea Turtle, one of the largest and most iconic marine reptiles, has seen its population decline drastically due to loss of nesting sites and entanglement in fishing gear. Freshwater turtles and tortoises are also vulnerable, with many species targeted for the exotic pet trade or used in traditional medicine.
+            </p>
+
+            <!-- Paragraph 2: Importance of Conservation -->
+            <p>
+                Conservation efforts are essential to protect these keystone species, which play vital roles in maintaining ecosystem health. Sea turtles, for example, help maintain healthy seagrass beds and coral reefs, which provide habitat for countless marine species. On land, tortoises aid in seed dispersal, supporting vegetation growth in arid environments. By conserving turtle populations, we are also protecting the delicate balance of the ecosystems they inhabit. This involves not only protecting nesting sites and creating wildlife corridors but also reducing human impacts like plastic waste and unsustainable fishing practices. Education and community engagement are key to raising awareness and inspiring collective action to ensure a future where turtles thrive.
+            </p>
+
+            <!-- Paragraph 3: Call to Action -->
+            <p>
+                You have the power to make a difference in the lives of turtles and the ecosystems they help sustain. Small actions, like reducing your use of single-use plastics, supporting sustainable fishing practices, and advocating for wildlife protection laws, can have a significant impact. Consider volunteering with local conservation groups or donating to organizations that work tirelessly to protect turtle habitats and rescue injured turtles. By spreading awareness and making eco-conscious choices, you can join the global effort to preserve these incredible creatures for generations to come. Together, we can ensure that turtles, symbols of resilience and longevity, continue to grace our oceans, rivers, and lands.
+            </p>
         </div>
     </section>
 
-    <!-- Footer -->
+    <!-- Footer Section -->
     <footer>
         <div class="container">
-            <p>&copy; <span class="footer-year"></span> Different Types of Turtles. All rights reserved.</p>
+            <p>&copy; <span class="footer-year"></span> Different Types of Turtles. All rights reserved.</p> <!-- Dynamic year will be displayed here -->
         </div>
     </footer>
 
-    <script src="assets/js/script.js"></script>
+    <!-- JavaScript -->
+    <script src="assets/js/script.js"></script> <!-- Link to the JavaScript file for interactivity -->
 </body>
 </html>
