--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
          </section>
      </div>
 
-     <section class="contact-form">
+     <section class="contact-form-section">
         <h2>Contact Us</h2>
         <p>If you have any questions or would like to share your thoughts, feel free to reach out using the form below.</p>
         <form id="contactForm">
