--- a/fun-facts.html
+++ b/fun-facts.html
@@ -1,29 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<meta name="description" content="Learn all about different types of turtles, their habitats, and conservation efforts." />
+		<!-- Meta Information -->
+		<meta charset="UTF-8" /> <!-- Specifies the character encoding for the document -->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" /> <!-- Ensures the page is responsive on mobile devices -->
+		<meta name="description" content="Learn all about different types of turtles, their habitats, and conservation efforts." /> <!-- Describes the page content for SEO -->
+
+		<!-- Page Title -->
 		<title>Different Types of Turtles</title>
-		<link rel="stylesheet" href="assets/css/styles.css" />
+
+		<!-- Stylesheets -->
+		<link rel="stylesheet" href="assets/css/styles.css" /> <!-- Link to the custom CSS file -->
 		<link
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.1/css/all.min.css"
 			integrity="sha512-5Hs3dF2AEPkpNAR7UiOHba+lRSJNeM2ECkwxUIxC1Q/FLycGTbNapWXB4tP889k5T5Ju8fs4b1P5z/iB4nMfSQ=="
 			crossorigin="anonymous"
 			referrerpolicy="no-referrer"
-		/>
+		/> <!-- Font Awesome for icons -->
 	</head>
 	<body>
-		<!-- Header and Hero Section -->
+		<!-- Hero Section with Header -->
 		<div class="hero">
-			<div class="overlay"></div>
+			<div class="overlay"></div> <!-- Transparent overlay for visual effect -->
+
+			<!-- Header with Navigation Menu -->
 			<header>
+				<!-- Mobile Navigation Toggle Button -->
 				<button id="navbarToggle" type="button" title="Navigation Toggle">
-					<i class="navbar-toggle-icon fas fa-bars"></i>
+					<i class="navbar-toggle-icon fas fa-bars"></i> <!-- Font Awesome icon for navigation toggle -->
 				</button>
+
+				<!-- Navigation Bar -->
 				<nav>
 					<ul>
+						<!-- Navigation Links -->
 						<li><a href="index.html">Home</a></li>
 						<li><a href="about.html">About</a></li>
 						<li><a href="types.html">Types of Turtles</a></li>
@@ -36,19 +47,19 @@
 
 			<!-- Fun Fact Section -->
 			<section class="fun-fact-section">
-				<p class="fun-fact"></p>
-				<button type="button" class="btn">New Fun Fact</button>
+				<p class="fun-fact"></p> <!-- Placeholder for dynamically generated fun facts -->
+				<button type="button" class="btn">New Fun Fact</button> <!-- Button to generate a new fun fact -->
 			</section>
-
 		</div>
 
-		<!-- Footer -->
+		<!-- Footer Section -->
 		<footer>
 			<div class="container">
-				<p>&copy; <span class="footer-year"></span> Different Types of Turtles. All rights reserved.</p>
+				<p>&copy; <span class="footer-year"></span> Different Types of Turtles. All rights reserved.</p> <!-- Dynamic year will be displayed here -->
 			</div>
 		</footer>
 
-		<script src="assets/js/script.js"></script>
+		<!-- JavaScript -->
+		<script src="assets/js/script.js"></script> <!-- Link to the external JavaScript file for interactivity -->
 	</body>
 </html>
